@@ -64,6 +64,12 @@ namespace D3DCompiler
 		Construct( blob );
 	}
 
+	ShaderBytecode^ ShaderBytecode::Compile( String^ shaderSource, String^ profile )
+	{
+		String^ compilationErrors;
+		return Compile( shaderSource, nullptr, profile, ShaderFlags::None, EffectFlags::None, nullptr, nullptr, compilationErrors );
+	}
+
 	ShaderBytecode^ ShaderBytecode::Compile( String^ shaderSource, String^ profile, ShaderFlags shaderFlags, EffectFlags effectFlags )
 	{
 		String^ compilationErrors;
@@ -81,6 +87,11 @@ namespace D3DCompiler
 		return Compile( shaderSource, nullptr, profile, shaderFlags, effectFlags, defines, include, compilationErrors );
 	}
 
+	ShaderBytecode^ ShaderBytecode::Compile( String^ shaderSource, String^ profile, ShaderFlags shaderFlags, EffectFlags effectFlags, array<ShaderMacro>^ defines, Include^ include, String^ sourceName, [Out] String^ %compilationErrors )
+	{
+		return Compile( shaderSource, nullptr, profile, shaderFlags, effectFlags, defines, include, sourceName, compilationErrors );
+	}
+
 	ShaderBytecode^ ShaderBytecode::Compile( String^ shaderSource, String^ entryPoint, String^ profile, ShaderFlags shaderFlags, EffectFlags effectFlags )
 	{
 		String^ compilationErrors;
@@ -95,10 +106,21 @@ namespace D3DCompiler
 	
 	ShaderBytecode^ ShaderBytecode::Compile( String^ shaderSource, String^ entryPoint, String^ profile, ShaderFlags shaderFlags, EffectFlags effectFlags, array<ShaderMacro>^ defines, Include^ include, [Out] String^ %compilationErrors )
 	{
+		return Compile( shaderSource, entryPoint, profile, shaderFlags, effectFlags, defines, include, nullptr, compilationErrors );
+	}
+
+	ShaderBytecode^ ShaderBytecode::Compile( String^ shaderSource, String^ entryPoint, String^ profile, ShaderFlags shaderFlags, EffectFlags effectFlags, array<ShaderMacro>^ defines, Include^ include, String^ sourceName, [Out] String^ %compilationErrors )
+	{
 		if (String::IsNullOrEmpty(shaderSource))
 			throw gcnew ArgumentNullException("shaderSource");
 
-		return Compile( Encoding::ASCII->GetBytes( shaderSource ), entryPoint, profile, shaderFlags, effectFlags, defines, include, compilationErrors );
+		return Compile( Encoding::ASCII->GetBytes( shaderSource ), entryPoint, profile, shaderFlags, effectFlags, defines, include, sourceName, compilationErrors );
+	}
+
+	ShaderBytecode^ ShaderBytecode::Compile( array<Byte>^ shaderSource, String^ profile )
+	{
+		String^ compilationErrors;
+		return Compile( shaderSource, nullptr, profile, ShaderFlags::None, EffectFlags::None, nullptr, nullptr, compilationErrors );
 	}
 
 	ShaderBytecode^ ShaderBytecode::Compile( array<Byte>^ shaderSource, String^ profile, ShaderFlags shaderFlags, EffectFlags effectFlags )
@@ -118,6 +140,11 @@ namespace D3DCompiler
 		return Compile( shaderSource, nullptr, profile, shaderFlags, effectFlags, defines, include, compilationErrors );
 	}
 
+	ShaderBytecode^ ShaderBytecode::Compile( array<Byte>^ shaderSource, String^ profile, ShaderFlags shaderFlags, EffectFlags effectFlags, array<ShaderMacro>^ defines, Include^ include, String^ sourceName, [Out] String^ %compilationErrors )
+	{
+		return Compile( shaderSource, nullptr, profile, shaderFlags, effectFlags, defines, include, sourceName, compilationErrors );
+	}
+
 	ShaderBytecode^ ShaderBytecode::Compile( array<Byte>^ shaderSource, String^ entryPoint, String^ profile, ShaderFlags shaderFlags, EffectFlags effectFlags )
 	{
 		String^ compilationErrors;
@@ -131,6 +158,11 @@ namespace D3DCompiler
 	}
 
 	ShaderBytecode^ ShaderBytecode::Compile( array<Byte>^ shaderSource, String^ entryPoint, String^ profile, ShaderFlags shaderFlags, EffectFlags effectFlags, array<ShaderMacro>^ defines, Include^ include, [Out] String^ %compilationErrors )
+	{
+		return Compile( shaderSource, entryPoint, profile, shaderFlags, effectFlags, defines, include, nullptr, compilationErrors );
+	}
+
+	ShaderBytecode^ ShaderBytecode::Compile( array<Byte>^ shaderSource, String^ entryPoint, String^ profile, ShaderFlags shaderFlags, EffectFlags effectFlags, array<ShaderMacro>^ defines, Include^ include, String^ sourceName, [Out] String^ %compilationErrors )
 	{
 		ID3D10Blob *code;
 		ID3D10Blob *errors;
@@ -147,6 +179,8 @@ namespace D3DCompiler
 		pin_ptr<Byte> pinnedFunction = functionBytes == nullptr ? nullptr : &functionBytes[0];
 		array<Byte>^ profileBytes = System::Text::ASCIIEncoding::ASCII->GetBytes( profile );
 		pin_ptr<Byte> pinnedProfile = &profileBytes[0];
+		array<Byte>^ sourceNameBytes = sourceName == nullptr ? nullptr : System::Text::ASCIIEncoding::ASCII->GetBytes( sourceName );
+		pin_ptr<Byte> pinnedName = sourceNameBytes == nullptr ? nullptr : &sourceNameBytes[0];
 
 		IncludeShim includeShim = IncludeShim( include );
 		ID3D10Include* includePtr = NULL;
@@ -157,7 +191,7 @@ namespace D3DCompiler
 		stack_array<D3D10_SHADER_MACRO> macros = ShaderMacro::Marshal( defines, handles );
 		D3D10_SHADER_MACRO* macrosPtr = macros.size() > 0 ? &macros[0] : NULL;
 		
-		HRESULT hr = D3DCompile( reinterpret_cast<LPCSTR>( pinnedSource ), shaderSource->Length, NULL, macrosPtr, includePtr,
+		HRESULT hr = D3DCompile( reinterpret_cast<LPCSTR>( pinnedSource ), shaderSource->Length, reinterpret_cast<LPCSTR>( pinnedName ), macrosPtr, includePtr,
 			reinterpret_cast<LPCSTR>( pinnedFunction ), reinterpret_cast<LPCSTR>( pinnedProfile ), static_cast<UINT>( shaderFlags ), static_cast<UINT>( effectFlags ), &code, &errors );
 
 		ShaderMacro::Unmarshal( handles );
@@ -168,6 +202,12 @@ namespace D3DCompiler
 			throw e;
 
 		return ShaderBytecode::FromPointer( code );
+	}
+
+	ShaderBytecode^ ShaderBytecode::CompileFromFile( String^ fileName, String^ profile )
+	{
+		String^ compilationErrors;
+		return CompileFromFile( fileName, nullptr, profile, ShaderFlags::None, EffectFlags::None, nullptr, nullptr, compilationErrors );
 	}
 
 	ShaderBytecode^ ShaderBytecode::CompileFromFile( String^ fileName, String^ profile, ShaderFlags shaderFlags, EffectFlags effectFlags )
@@ -209,7 +249,7 @@ namespace D3DCompiler
 		if (!File::Exists(fileName))
 			throw gcnew FileNotFoundException("Could not open the shader or effect file.", fileName);
 
-		return Compile(File::ReadAllText(fileName), entryPoint, profile, shaderFlags, effectFlags, defines, include, compilationErrors);
+		return Compile(File::ReadAllText(fileName), entryPoint, profile, shaderFlags, effectFlags, defines, include, fileName, compilationErrors);
 	}
 
 	String^ ShaderBytecode::Preprocess( String^ shaderSource )
