@@ -53,6 +53,14 @@ namespace SlimDX
 			/// </summary>
 			/// <param name="shaderSource">A string containing the source of the shader or effect to compile.</param>
 			/// <param name="profile">The shader target or set of shader features to compile against.</param>
+			/// <returns>The compiled shader bytecode, or <c>null</c> if the method fails.</returns>
+			static ShaderBytecode^ Compile( System::String^ shaderSource, System::String^ profile );
+
+			/// <summary>
+			/// Compiles the provided shader or effect source.
+			/// </summary>
+			/// <param name="shaderSource">A string containing the source of the shader or effect to compile.</param>
+			/// <param name="profile">The shader target or set of shader features to compile against.</param>
 			/// <param name="shaderFlags">Shader compilation options.</param>
 			/// <param name="effectFlags">Effect compilation options.</param>
 			/// <returns>The compiled shader bytecode, or <c>null</c> if the method fails.</returns>
@@ -82,6 +90,20 @@ namespace SlimDX
 			/// <param name="compilationErrors">When the method completes, contains a string of compilation errors, or an empty string if compilation succeeded.</param>
 			/// <returns>The compiled shader bytecode, or <c>null</c> if the method fails.</returns>
 			static ShaderBytecode^ Compile( System::String^ shaderSource, System::String^ profile, ShaderFlags shaderFlags, EffectFlags effectFlags, array<ShaderMacro>^ defines, Include^ include, [Out] System::String^ %compilationErrors );
+
+			/// <summary>
+			/// Compiles the provided shader or effect source.
+			/// </summary>
+			/// <param name="shaderSource">A string containing the source of the shader or effect to compile.</param>
+			/// <param name="profile">The shader target or set of shader features to compile against.</param>
+			/// <param name="shaderFlags">Shader compilation options.</param>
+			/// <param name="effectFlags">Effect compilation options.</param>
+			/// <param name="defines">A set of macros to define during compilation.</param>
+			/// <param name="include">An interface for handling include files.</param>
+			/// <param name="sourceName">The name of the source being compiled. This is only used for error reporting purposes.</param>
+			/// <param name="compilationErrors">When the method completes, contains a string of compilation errors, or an empty string if compilation succeeded.</param>
+			/// <returns>The compiled shader bytecode, or <c>null</c> if the method fails.</returns>
+			static ShaderBytecode^ Compile( System::String^ shaderSource, System::String^ profile, ShaderFlags shaderFlags, EffectFlags effectFlags, array<ShaderMacro>^ defines, Include^ include, System::String^ sourceName, [Out] System::String^ %compilationErrors );
 
 			/// <summary>
 			/// Compiles the provided shader or effect source.
@@ -124,6 +146,29 @@ namespace SlimDX
 			/// <summary>
 			/// Compiles the provided shader or effect source.
 			/// </summary>
+			/// <param name="shaderSource">A string containing the source of the shader or effect to compile.</param>
+			/// <param name="entryPoint">The name of the shader entry-point function, or <c>null</c> for an effect file.</param>
+			/// <param name="profile">The shader target or set of shader features to compile against.</param>
+			/// <param name="shaderFlags">Shader compilation options.</param>
+			/// <param name="effectFlags">Effect compilation options.</param>
+			/// <param name="defines">A set of macros to define during compilation.</param>
+			/// <param name="include">An interface for handling include files.</param>
+			/// <param name="sourceName">The name of the source being compiled. This is only used for error reporting purposes.</param>
+			/// <param name="compilationErrors">When the method completes, contains a string of compilation errors, or an empty string if compilation succeeded.</param>
+			/// <returns>The compiled shader bytecode, or <c>null</c> if the method fails.</returns>
+			static ShaderBytecode^ Compile( System::String^ shaderSource, System::String^ entryPoint, System::String^ profile, ShaderFlags shaderFlags, EffectFlags effectFlags, array<ShaderMacro>^ defines, Include^ include, System::String^ sourceName, [Out] System::String^ %compilationErrors );
+
+			/// <summary>
+			/// Compiles the provided shader or effect source.
+			/// </summary>
+			/// <param name="shaderSource">An array of bytes containing the raw source of the shader or effect to compile.</param>
+			/// <param name="profile">The shader target or set of shader features to compile against.</param>
+			/// <returns>The compiled shader bytecode, or <c>null</c> if the method fails.</returns>
+			static ShaderBytecode^ Compile( array<System::Byte>^ shaderSource, System::String^ profile );
+
+			/// <summary>
+			/// Compiles the provided shader or effect source.
+			/// </summary>
 			/// <param name="shaderSource">An array of bytes containing the raw source of the shader or effect to compile.</param>
 			/// <param name="profile">The shader target or set of shader features to compile against.</param>
 			/// <param name="shaderFlags">Shader compilation options.</param>
@@ -155,6 +200,20 @@ namespace SlimDX
 			/// <param name="compilationErrors">When the method completes, contains a string of compilation errors, or an empty string if compilation succeeded.</param>
 			/// <returns>The compiled shader bytecode, or <c>null</c> if the method fails.</returns>
 			static ShaderBytecode^ Compile( array<System::Byte>^ shaderSource, System::String^ profile, ShaderFlags shaderFlags, EffectFlags effectFlags, array<ShaderMacro>^ defines, Include^ include, [Out] System::String^ %compilationErrors );
+
+			/// <summary>
+			/// Compiles the provided shader or effect source.
+			/// </summary>
+			/// <param name="shaderSource">An array of bytes containing the raw source of the shader or effect to compile.</param>
+			/// <param name="profile">The shader target or set of shader features to compile against.</param>
+			/// <param name="shaderFlags">Shader compilation options.</param>
+			/// <param name="effectFlags">Effect compilation options.</param>
+			/// <param name="defines">A set of macros to define during compilation.</param>
+			/// <param name="include">An interface for handling include files.</param>
+			/// <param name="sourceName">The name of the source being compiled. This is only used for error reporting purposes.</param>
+			/// <param name="compilationErrors">When the method completes, contains a string of compilation errors, or an empty string if compilation succeeded.</param>
+			/// <returns>The compiled shader bytecode, or <c>null</c> if the method fails.</returns>
+			static ShaderBytecode^ Compile( array<System::Byte>^ shaderSource, System::String^ profile, ShaderFlags shaderFlags, EffectFlags effectFlags, array<ShaderMacro>^ defines, Include^ include, System::String^ sourceName, [Out] System::String^ %compilationErrors );
 
 			/// <summary>
 			/// Compiles the provided shader or effect source.
@@ -193,6 +252,29 @@ namespace SlimDX
 			/// <param name="compilationErrors">When the method completes, contains a string of compilation errors, or an empty string if compilation succeeded.</param>
 			/// <returns>The compiled shader bytecode, or <c>null</c> if the method fails.</returns>
 			static ShaderBytecode^ Compile( array<System::Byte>^ shaderSource, System::String^ entryPoint, System::String^ profile, ShaderFlags shaderFlags, EffectFlags effectFlags, array<ShaderMacro>^ defines, Include^ include, [Out] System::String^ %compilationErrors );
+
+			/// <summary>
+			/// Compiles the provided shader or effect source.
+			/// </summary>
+			/// <param name="shaderSource">An array of bytes containing the raw source of the shader or effect to compile.</param>
+			/// <param name="entryPoint">The name of the shader entry-point function, or <c>null</c> for an effect file.</param>
+			/// <param name="profile">The shader target or set of shader features to compile against.</param>
+			/// <param name="shaderFlags">Shader compilation options.</param>
+			/// <param name="effectFlags">Effect compilation options.</param>
+			/// <param name="defines">A set of macros to define during compilation.</param>
+			/// <param name="include">An interface for handling include files.</param>
+			/// <param name="sourceName">The name of the source being compiled. This is only used for error reporting purposes.</param>
+			/// <param name="compilationErrors">When the method completes, contains a string of compilation errors, or an empty string if compilation succeeded.</param>
+			/// <returns>The compiled shader bytecode, or <c>null</c> if the method fails.</returns>
+			static ShaderBytecode^ Compile( array<System::Byte>^ shaderSource, System::String^ entryPoint, System::String^ profile, ShaderFlags shaderFlags, EffectFlags effectFlags, array<ShaderMacro>^ defines, Include^ include, System::String^ sourceName, [Out] System::String^ %compilationErrors );
+
+			/// <summary>
+			/// Compiles a shader or effect from a file on disk.
+			/// </summary>
+			/// <param name="fileName">The name of the source file to compile.</param>
+			/// <param name="profile">The shader target or set of shader features to compile against.</param>
+			/// <returns>The compiled shader bytecode, or <c>null</c> if the method fails.</returns>
+			static ShaderBytecode^ CompileFromFile( System::String^ fileName, System::String^ profile );
 
 			/// <summary>
 			/// Compiles a shader or effect from a file on disk.
